--- a/_posts/2013-12-06-featured.md
+++ b/_posts/2013-12-06-featured.md
@@ -33,4 +33,4 @@ We will be accepting applications starting January 6, 2014.
 
 Artist applications will likely be due on March 14, 2014. 
 
-The festtival date will be Saturday, June 7, 2014.
+The festival date will be Saturday, June 7, 2014.
