--- a/_posts/2013-12-06-featured.md
+++ b/_posts/2013-12-06-featured.md
@@ -1,7 +1,7 @@
 ---
-title: Festured Artists for 2014
+title: Featured Artists for 2014
 date: 2013-12-06
-tags: Festured Artist
+tags: Featured Artist
 layout: post
 ---
 
