--- a/_posts/2013-12-06-featured.md
+++ b/_posts/2013-12-06-featured.md
@@ -15,14 +15,15 @@ Dan and Lee Ross, Sculpture
 
 &nbsp;
 
-![Leo and Dina Lisovskis Trees](/images/2014/LisovskisTrees.jpg)
+![Leo and Dina Lisovskis Amber](/images/2014/Lisovskis1.jpeg)
 
 Leo and Dina Lisovskis, Jewelry  
 [Profile from the Sogn Valley Fair](http://sognvalleycraftfair.blogspot.com/p/leo-and-dina-lisovskis-artists-in.html)
 
 &nbsp;
 
-![Regula Russelle One World](/images/2014/RusselleOne.jpg)
+![Regula Russelle Atmosphere](/images/2014/RusselleAtmos.jpg) 
+Regula Russelle, History of the Atmosphere
 
 Regula Russelle, Book Arts  
 [www.regularusselle.com](http://www.regularusselle.com/)
