Smaller lisovskis images

--- a/_posts/2013-12-06-featured.md
+++ b/_posts/2013-12-06-featured.md
@@ -15,7 +15,7 @@ Dan and Lee Ross, Sculpture
 
 &nbsp;
 
-![Leo and Dina Lisovskis Amber](/images/2014/Lisovskis1.jpeg)
+![Leo and Dina Lisovskis Amber](/images/2014/Lisovskis1.jpg)
 
 Leo and Dina Lisovskis, Jewelry  
 [Profile from the Sogn Valley Fair](http://sognvalleycraftfair.blogspot.com/p/leo-and-dina-lisovskis-artists-in.html)
