--- a/_posts/2013-12-06-featured.md
+++ b/_posts/2013-12-06-featured.md
@@ -11,7 +11,7 @@ We are proud to announce our Featured Artists for 2014:
 ![Dan Ross Sculpture](/images/2014/RossBear.jpg)
 
 Dan and Lee Ross, Sculpture  
-[MNSculptors.com](http://www.mnsculptors.com/gallery.php?memid=1230766700&p=99)
+[danross-leeross.com](http://www.danross-leeross.com/)
 
 &nbsp;
 
