--- a/_posts/2014-05-01-artists.md
+++ b/_posts/2014-05-01-artists.md
@@ -9,21 +9,31 @@ Today's Spotlight artists:
 
 ![Dan Ross Sculpture](/images/2014/posts/2014-05-01/RossBear.jpg)
 
-[Dan and Lee Ross](http://sapfest.org/info/artists2014.html#Dan%20&%20Lee_Ross), Sculpture  
+Dan & Lee Ross
+
+Hovland, Minnesota, [http://www.mnsculptors.com/dan.ross](http://www.mnsculptors.com/dan.ross)
+
+We work side by side from initial design to the finished sculptures. Chisled granite and limestone combined with slab constructed stoneware clay are the materials we work with. Our ceramic work is fired to 2300 F. making it suitable for outdoor installations. Our stone sculptures are direct carved using chisels, diamond saws & grinders.
 
 &nbsp;
 
 ![Ernest Miller](/images/2014/posts/2014-05-01/Miller.jpg)
 
-[Ernest Miller](http://sapfest.org/info/artists2014.html#Ernest_Miller), Ceramics  
+Ernest Miller
+
+Minneapolis, Minnesota, [http://www.ernestmiller.com](http://www.ernestmiller.com)
+
+Wheel thrown porcelain, fired in electric kiln to 2250 degrees Fahrenheit.
 
 &nbsp;
 
 ![Megan Moore](/images/2014/posts/2014-05-01/Moore.jpg)
 
-[Megan Moore](http://sapfest.org/info/artists2014.html#Megan_Moore), Painting  
+Location: Minneapolis, Minnesota,  [Megan Moore](http://sapfest.org/info/artists2014.html#Megan_Moore)
+
+I am a painter working primarily in oils, but also in acrylic and gouache. I sell reproductions as well as original work. My compositions are inspired by nature and travel.
 
 &nbsp;
 
-See you at the festival!  
+See you at the festival on  
 Saturday, June 7, 2014.
