--- a/_posts/2014-05-22-artists.md
+++ b/_posts/2014-05-22-artists.md
@@ -33,7 +33,7 @@ Colleen Tabaika
 
 St Paul, Minnesota []()
 
-HANDWOVEN RUGS AND RUNNERS IN PLAIN WEAVE WITH COTTON WARP AND WEFT 
+Handwoven rugs and runners in plain weave with cotton warop and weft.
 
 &nbsp;
 
