--- a/_posts/2014-05-29-artists.md
+++ b/_posts/2014-05-29-artists.md
@@ -9,11 +9,11 @@ Today's Spotlight artists:
 
 ![mark nuebel](/images/2014/posts/120654.531202.jpg)
 
-mark nuebel 
+Mark Nuebel
 
 Newport, Minnesota [http://marknuebel.com](http://marknuebel.com)
 
-my work is metalsmithing and fabrication of mixed metal jewelry. I use traditional methods of cutting forging soldering and patination of a mix of sterling silver and copper. And all my jewelry is constructed using my handmade findings 
+My work is metalsmithing and fabrication of mixed metal jewelry. I use traditional methods of cutting forging soldering and patination of a mix of sterling silver and copper. And all my jewelry is constructed using my handmade findings 
 
 &nbsp;
 
@@ -23,13 +23,13 @@ Christy Johnson
 
 Minneapolis, Minnesota [http://www.redshoes26design.com](http://www.redshoes26design.com)
 
-I draw my State Icon illustrations digitally, using my mouse, at the tiny size in which they're displayed. They are archival-quality giclee prints that I make in my studio, and I finish them in simple frames that are handmade by my parents. 
+I draw my State Icon illustrations digitally, using my mouse, at the tiny size in which they're displayed. They are archival-quality giclee prints that I make in my studio, and I finish them in simple frames that are handmade by my parents.
 
 &nbsp;
 
 ![Larissa Loden](/images/2014/posts/121009.532179.jpg)
 
-Larissa Loden 
+Larissa Loden
 
 Saint Paul, Minnesota [http://www.larissaloden.com](http://www.larissaloden.com)
 
@@ -37,7 +37,7 @@ Vintage meets modern jewelry. I use deadstock and vintage components to design m
 
 &nbsp;
 
-If you liked this post we invite you to 
+If you liked this post we invite you to
 [like our Facebook page](https://www.facebook.com/SAPArtsFestival)
 
 See you at the festival on  
