--- a/_posts/2014-06-06-artists.md
+++ b/_posts/2014-06-06-artists.md
@@ -27,13 +27,13 @@ Pen & ink and watercolor paintings.  I use india ink and a dipped quill type pen
 
 &nbsp;
 
-![Mary Jo Fox](/images/2014/posts/119364.526917.jpg)
+![Chuck Solberg](/images/2014/posts/120700.531205.jpg)
 
-Mary Jo Fox 
+Chuck Solberg 
 
-Willard, Wisconsin [http://maryjofox.com](http://maryjofox.com)
+Saint Paul, Minnesota [http://www.solbergpottery.com](http://www.solbergpottery.com)
 
-Pen & ink and watercolor paintings.  I use india ink and a dipped quill type pen. 
+My large pots are wheel thrown, cut apart, altered & fired 4 days in my wood fueled kiln. Ash & fire marks create color & surface. My goal is to keep the spontaneity of clay in the finished work. 
 
 &nbsp;
 
