--- a/_posts/2014-06-06-artists.md
+++ b/_posts/2014-06-06-artists.md
@@ -1,44 +1,158 @@
 ---
-title: Artist Spotlight, June 06, 2014
-date: 2014-06-06
-tags: Artist Spotlight
+title: Thank You!
+date: 2014-06-16
+tags: Thank You
 layout: post
 ---
 
-Today's Spotlight artists:
 
-![Robert Briscoe](/images/2014/posts/108241.480800.jpg)
+## Looking back on June 7, 2104
 
-Robert Briscoe 
+It was a wet start but a good finish. 
+Thank you once again for showing that you are one of the friendliest, supportive crowds around!
 
-Harris, Minnesota []()
+![SAP Festival 2014](/images/2014/sapfest-9054.jpg)
 
-Wheel thrown and altered stoneware clay.  Wood ash glazed over colored and crackle slips.  Fired in reduction atmosphere to 2400 degrees F.  Designed to be functional. 
+###A HUGE Thank You to Our Community!
 
-&nbsp;
+#### Underwriters:
 
-![Mary Jo Fox](/images/2014/posts/119364.526917.jpg)
+- Harlan Boss Foundation for the Arts
+- Renewal Windows by Andersen 
 
-Mary Jo Fox
+#### Sponsors:
 
-Willard, Wisconsin [http://maryjofox.com](http://maryjofox.com)
+- The Bibelot
+- Carter Avenue Frame Shop
+- Tim & Tom’s Speedy Market
+- Steve Townley Realty
 
-Pen & ink and watercolor paintings.  I use india ink and a dipped quill type pen. 
+#### Supporters & Friends:
 
-&nbsp;
+- Boy Scout Troop 17
+- Bungalow Pottery
+- Dock 6 Pottery 
+- Dunn Brothers Coffee
+- Eyedeals
+- The Emily Program
+- The Finnish Bistro
+- The Little Wine Shoppe
+- Luther Seminary
+- Milton Square
+- Ned’s Park Service 
+- Park Bugle
+- Paul Kirkegaard, DDS
+- St. Anthony Park Branch Library staff
+- St. Anthony Park Garden Club
+- St. Anthony Park Lutheran Church
+- St. Anthony Park United Church of Christ
+- St. Anthony Park United Methodist Church
+- Arlene West Communications
 
-![Chuck Solberg](/images/2014/posts/120700.531205.jpg)
+#### Special Thanks: 
 
-Chuck Solberg 
+- Marcia Anderson
+- Marshall Browne
+- Kathy Harding
+- Dave Lee 
+- Regula Russelle
+- Leo and Dina Lisovskis
+- Dan and Lee Ross
+- Phil Rukavina
 
-Saint Paul, Minnesota [http://www.solbergpottery.com](http://www.solbergpottery.com)
+#### Musicians:
 
-My large pots are wheel thrown, cut apart, altered & fired 4 days in my wood fueled kiln. Ash & fire marks create color & surface. My goal is to keep the spontaneity of clay in the finished work. 
+- Center for Irish Music Advanced Youth Ensemble 
+- Ladyslipper Baroque Ensemble
+- Richard Griffith and Phillip Rukavina
+- Minnesota Mandolin Orchestra
+- Drumheart
+- Becky Kapell
+- Chuck Solberg
+- Sherry Minnick 
 
-&nbsp;
+#### Community Groups:
 
-If you liked this post we invite you to 
-[like our Facebook page](https://www.facebook.com/SAPArtsFestival)
+- Transition Town
+- Como Park Sr. High
+- Murray Jr. High
+- Park Bugle
+- SAP Area Seniors
+- SAP Foundation
 
-See you at the festival on  
-Saturday, June 7, 2014.
+#### Business special events:
+
+- Tim & Tom's Speedy Market
+- Lady Elegants Tea Shoppe
+- The Bibelot
+- Peapods
+- Satori Photography
+
+####And our many volunteers:
+
+- Joy Albrecht
+- Ben Anderson
+- Cindy Anderson
+- Bob Arndorfer
+- Sonja Batalden
+- Emily Blodgett
+- Emilie Bouvier
+- Barbara Burk
+- Barbara Cain
+- Mark Broderick
+- Lia Chin-Purcell
+- Mara Chin-Purcell
+- Michele Chin-Purcell
+- Ann Commers
+- Gene Crawshaw
+- Amy Dailey
+- Dave Daly
+- Alice Duggan
+- Joleen Emery 
+- Kristen Evenson
+- Ann Fendorf
+- Tim Fuller
+- Jill Galstad
+- Catherine Guglielmo
+- Susan Henry
+- Mary Griffin
+- Ross Jackson
+- Alison Larsson
+- Isak Larsson
+- Elizabeth Lee
+- Kristal Leebrick
+- Kathy Malchow
+- Cathal Mee
+- Eamonn Mee
+- Niamh Mee
+- Judy Probst
+- Cynthia Putz-Yang
+- Jane Rauenhorst
+- Nate Rue
+- Lisa Sackreiter
+- Mary Scanlan
+- Shelley Sherman
+- Frank Steen
+- Deena Strohman
+- Nancy Struthers
+- Steve Struthers
+- Chu Li Vu
+- Darin Warling 
+- Marty Wolf 
+- John Wolf
+- Joe WildCrea
+- Rhona Wilson
+- Bob Zalaznik
+- Brian at the library
+- Travis and Matt, the potters
+
+#### From Committee Members: 
+
+- Ken Chin-Purcell
+- Martha Russell
+- Jan Shafer Sedgewick
+- Patty Stolpman
+- Arlene West
+- Annie Yetter
+- Susan Dean, Book Sale Chair
+- Alisa Mee, Children’s Art Tent Coordinator
