Added Brian Moser

--- a/_posts/2014-06-16-thanks.md
+++ b/_posts/2014-06-16-thanks.md
@@ -125,6 +125,7 @@ Thank you once again for showing that you are one of the friendliest, supportive
 - Cathal Mee
 - Eamonn Mee
 - Niamh Mee
+- Brian Moser
 - Judy Probst
 - Cynthia Putz-Yang
 - Jane Rauenhorst
@@ -143,7 +144,6 @@ Thank you once again for showing that you are one of the friendliest, supportive
 - Joe WildCrea
 - Rhona Wilson
 - Bob Zalaznik
-- Brian at the library
 - Travis and Matt, the potters
 
 #### From Committee Members: 
