--- a/_posts/2014-06-16-thanks.md
+++ b/_posts/2014-06-16-thanks.md
@@ -139,10 +139,12 @@ Thank you once again for showing that you are one of the friendliest, supportive
 - Steve Struthers
 - Chu Li Vu
 - Darin Warling 
-- Marty Wolf 
-- John Wolf
+- Claudia Wielgorecki
 - Joe WildCrea
 - Rhona Wilson
+- Linda Wingader
+- Marty Wolf 
+- John Wolf
 - Bob Zalaznik
 - Travis and Matt, the potters
 
